--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,33 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
+  --tw-gradient-from: #9333ea var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(147 51 234 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-to: #2563eb var(--tw-gradient-to-position);
+  color: #ffff;
+}
+
+button {
+  background-color: #3b82f6;
+  text-align: center;
+}
+
+.btn1 {
+  min-width: 150px;
+  padding: 20px;
+  border-radius: 0.25rem;
+  font-weight: 700;
+}
+
+.main {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: normal;
+  padding: 6rem;
 }
 
 @layer utilities {
