--- a/app/globals.css
+++ b/app/globals.css
@@ -25,16 +25,20 @@ body {
   color: #ffff;
 }
 
-button {
-  background-color: #3b82f6;
-  text-align: center;
-}
-
 .btn1 {
+  /*background-color: #3b82f6;*/
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+  --tw-gradient-from: #e62c89bb var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(147 51 234 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+  --tw-gradient-to: #2563eb var(--tw-gradient-to-position);
+  border-width: 3px;
+  text-align: center;
   min-width: 150px;
   padding: 20px;
   border-radius: 0.25rem;
   font-weight: 700;
+  color: #ffff;
 }
 
 .main {
